--- a/content/publication/orderedsub/cite.bib
+++ b/content/publication/orderedsub/cite.bib
@@ -1,8 +1,17 @@
 @misc{orderedsub,
-      title={Ordered Submodularity and its Applications to Diversifying Recommendations}, 
-      author={Jon Kleinberg and Emily Ryu and Éva Tardos},
-      year={2022},
-      eprint={2203.00233},
-      archivePrefix={arXiv},
-      primaryClass={cs.DS}
+  doi = {10.48550/ARXIV.2302.03239},
+  
+  url = {https://arxiv.org/abs/2302.03239},
+  
+  author = {Kleinberg, Jon and Ryu, Emily and Tardos, Éva},
+  
+  keywords = {Data Structures and Algorithms (cs.DS), Computer Science and Game Theory (cs.GT), Social and Information Networks (cs.SI), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {Calibrated Recommendations for Users with Decaying Attention},
+  
+  publisher = {arXiv},
+  
+  year = {2023},
+  
+  copyright = {arXiv.org perpetual, non-exclusive license}
 }
